--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,11 @@
 apply plugin: 'com.android.application'
+apply plugin: 'checkstyle'
+
+repositories {
+    maven {
+        url "http://ci.novoda.com/maven/releases/"
+    }
+}
 
 android {
     signingConfigs {
@@ -12,6 +19,14 @@ android {
         versionCode 3
         versionName "2.0.12"
     }
+
+    lintOptions {
+        enable 'GradleDynamicVersion', 'NewerVersionAvailable', 'StopShip'
+        disable 'InvalidPackage'
+        absolutePaths false
+        lintConfig file("config/lint/lint.xml")
+    }
+
     buildTypes {
         debug {
             buildConfigField "String", "REST_URI", "\"https://farbtrommel.de/api/v1/zwitscherwecker/stats/\""
@@ -28,3 +43,20 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:18.0.+'
 }
+
+
+task appcheckstyle(type: Checkstyle) {
+    source 'src'
+    include '**/*.java'
+    exclude '**/gen/**'
+    exclude '**/R.java'
+    exclude '**/BuildConfig.java'
+
+    def configProps = ['proj.module.dir': projectDir.absolutePath]
+    configProperties configProps
+
+    // empty classpath
+    classpath = files()
+
+}
+check.dependsOn(appcheckstyle)
