--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="de.farbtrommel.zwitscherwecker.AlarmActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
@@ -21,7 +21,7 @@
         </activity>
 
         <receiver
-            android:name="de.farbtrommel.zwitscherwecker.AlarmManagerReceiver"
+            android:name=".AlarmReceiver"
             android:process=":remote" />
 
         <activity
